--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
    <p>Mon image</p>
-   <img src="../IMG/planète.jpg" >
+   <img src="./planète.jpg" >
    
    <p> Mon tableau</p>
    <table>
